<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrtstar_path_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shimohara7192@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robot_state_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
